# omnivoice-server

./: .dockerignore  .editorconfig  .gitattributes  .pre-commit-config.yaml  .smoke_stt.py  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  Makefile  README.md  SECURITY.md  diag_stt_final.py  docker-compose-cuda.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml
docs/: README.md
docs/architecture/: README.md  overview.md
docs/design/: README.md  dataflow.md
docs/plan/: README.md
docs/readme/sections/: 03-verification-status.md  06-configuration.md  14-troubleshooting.md
docs/reports/: review-multi-speaker-script-api.md
docs/reports/21/: code-path-analysis.md  issue-21-resolution-report.md  issue-21-tech-investigation-summary.md  responsibility-attribution.md  tech-gradio.md  tech-omnivoice-server.md  tech-omnivoice.md  tech-open-notebook.md  tech-openai-tts-api.md  tech-podcastfy.md
docs/reports/23/: bug-analysis-23-torchcodec-windows.md
docs/reports/24/: cors-policy-error-report.md
docs/roadmap/: README.md
docs/system/: README.md  ecosystem.md  specification.md
examples/: streaming_player.py  streaming_transcribe.py
examples/web/: index.html
omnivoice_server/: __init__.py  app.py  cli.py  config.py
omnivoice_server/routers/: health.py  script.py  speech.py  transcribe.py  voices.py
omnivoice_server/services/: inference.py  model.py  script.py  stt.py  stt_model.py
omnivoice_server/static/: index.html
omnivoice_server/utils/: audio.py  text.py
samples/qa/: report.json
tests/: conftest.py  test_cors.py  test_issue_21_reproduction.py  test_script.py  test_speech.py  test_static_and_auth_status.py  test_streaming.py  test_transcribe.py
